tests/harness/errors/180_lookup_fail_large_block.eu
# Error test (eu-f3ss): a key-not-found lookup on a large block walks the
# whole kv-pair spine to build the 'did you mean?' hint. The walk must stay
# GC-safe (re-resolving from the rooted block ref across each force).
b: {
  k00: 0
  k01: 1
  k02: 2
  k03: 3
  k04: 4
  k05: 5
  k06: 6
  k07: 7
  k08: 8
  k09: 9
  k10: 10
  k11: 11
  k12: 12
  k13: 13
  k14: 14
  k15: 15
  k16: 16
  k17: 17
  k18: 18
  k19: 19
  k20: 20
  k21: 21
  k22: 22
  k23: 23
  k24: 24
  k25: 25
  k26: 26
  k27: 27
  k28: 28
  k29: 29
  k30: 30
  k31: 31
  k32: 32
  k33: 33
  k34: 34
  k35: 35
  k36: 36
  k37: 37
  k38: 38
  k39: 39
}
miss: b.k99
